Fixed nav colour and z-index

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -341,6 +341,7 @@ div.nav{
 	left: 50%;
 	margin-left: -152.5px;
 	top: 0;
+	z-index: -1;
 }
 
 div.nav ul{
@@ -357,7 +358,8 @@ div.nav ul li{
 
 div.nav ul li a{
 	text-decoration: none;
-	color: #c6c6c5;
+	color: #fff;
+	text-shadow: 0 1px 0 rgba(0,0,0,0.4);
 	font-family: AvenirLTStd-Black, Helvetica, Arial, sans-serif;
 	font-size: 13px;
 	letter-spacing: 1px;
